<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/shrine_pink_50">

    <TextView
        android:id="@+id/trialNumberView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/trialNumber"
        android:textColor="@color/shrine_pink_900"
        app:layout_constraintStart_toEndOf="@id/minimumNumberTrialsText"
        app:layout_constraintTop_toBottomOf="@id/experimentTitleView" />

    <TextView
        android:id="@+id/minimumNumberTrialsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/minimum_number_of_trials_text"
        android:textColor="@color/shrine_pink_900"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/experimentTitleView" />

    <TextView
        android:id="@+id/userIDView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="8dp"
        android:text="@string/userid_view"
        android:textColor="@color/shrine_pink_900"
        app:layout_constraintStart_toEndOf="@id/userIDText"
        app:layout_constraintTop_toBottomOf="@+id/experimentTitleView" />

    <TextView
        android:id="@+id/userIDText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/userid_text"
        android:textColor="@color/shrine_pink_900"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/experimentTitleView" />

    <TextView
        android:id="@+id/experimentTitleView"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/experiment_title_view"
        android:textColor="@color/shrine_pink_900"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Count"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="116dp"
        android:text="@string/count_text"
        android:textColor="@color/shrine_pink_900"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/experimentTitleView" />

    <TextView
        android:id="@+id/LocationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="128dp"
        android:text="@string/location_text"
        android:textColor="@color/shrine_pink_900"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Count" />

    <TextView
        android:id="@+id/locationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:text="@string/location_view"
        android:textColor="@color/shrine_pink_900"
        app:layout_constraintStart_toEndOf="@+id/LocationText"
        app:layout_constraintTop_toTopOf="@+id/LocationText" />

    <Button
        android:id="@+id/QuestionButton"
        android:layout_width="147dp"
        android:layout_height="46dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:text="@string/question_button"
        android:textSize="12sp"
        app:backgroundTint="@color/shrine_pink_900"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateHistogramButton" />

    <Button
        android:id="@+id/CreateHistogramButton"
        android:layout_width="185dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/createhistogram"
        app:backgroundTint="@color/shrine_pink_900"
        app:layout_constraintEnd_toStartOf="@+id/ResultsOverTimeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Count" />

    <Button
        android:id="@+id/ResultsOverTimeButton"
        android:layout_width="185dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/resultsOverTime"
        app:backgroundTint="@color/shrine_pink_900"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.289"
        app:layout_constraintStart_toEndOf="@+id/CreateHistogramButton"
        app:layout_constraintTop_toTopOf="@+id/CreateHistogramButton" />

    <TextView
        android:id="@+id/Success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/success_text"
        android:textColor="@color/shrine_pink_900"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Count" />

    <TextView
        android:id="@+id/FailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/fail_text"
        android:textColor="@color/shrine_pink_900"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Success" />

    <TextView
        android:id="@+id/successView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="180dp"
        android:layout_marginRight="180dp"
        android:text="@string/success_view"
        android:textColor="@color/shrine_pink_900"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Success"
        app:layout_constraintTop_toTopOf="@+id/Success" />

    <TextView
        android:id="@+id/failView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="180dp"
        android:layout_marginRight="180dp"
        android:text="@string/fail_view"
        android:textColor="@color/shrine_pink_900"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toEndOf="@+id/FailText"
        app:layout_constraintTop_toBottomOf="@+id/successView" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="106dp"
        android:layout_height="55dp"
        android:layout_marginBottom="88dp"
        android:text="@string/start_button"
        app:backgroundTint="#7E5256"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/QuestionButton"
        app:layout_constraintVertical_bias="0.686" />

</androidx.constraintlayout.widget.ConstraintLayout>