<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/experimentTitleView"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/experiment_title_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userIDText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/userid_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/experimentTitleView" />

    <TextView
        android:id="@+id/regionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/region_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userIDText" />

    <TextView
        android:id="@+id/MinimumNumberTrialsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/minimum_number_of_trials_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regionText" />

    <TextView
        android:id="@+id/userIDView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="24dp"
        android:text="@string/userid_view"
        app:layout_constraintStart_toEndOf="@+id/userIDText"
        app:layout_constraintTop_toBottomOf="@+id/experimentTitleView" />

    <TextView
        android:id="@+id/regionView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/region_view"
        app:layout_constraintStart_toEndOf="@+id/regionText"
        app:layout_constraintTop_toBottomOf="@+id/userIDView" />

    <TextView
        android:id="@+id/trialNumberView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="111dp"
        android:text="@string/trialNumber"
        app:layout_constraintStart_toEndOf="@+id/MinimumNumberTrialsText"
        app:layout_constraintTop_toBottomOf="@+id/experimentTitleView" />

    <Button
        android:id="@+id/generateQRCodeButton"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/generate_qr_code_button"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MinimumNumberTrialsText" />

    <TextView
        android:id="@+id/successText"
        android:layout_width="383dp"
        android:layout_height="73dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/countDescriptionText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generateQRCodeButton" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="78dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="200dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/minusOneButton"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toEndOf="@+id/addOneButton" />

    <TextView
        android:id="@+id/nonNegativeCountView"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/zero"
        android:textSize="35sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/successText"
        android:gravity="center"/>

    <Button
        android:id="@+id/addOneButton"
        android:layout_width="63dp"
        android:layout_height="51dp"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="16dp"
        android:text="@string/plus_sign"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nonNegativeCountView" />

    <Button
        android:id="@+id/minusOneButton"
        android:layout_width="63dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:text="@string/minus_sign"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nonNegativeCountView" />

    <!-- THIS BUTTON FOR QUESTION IS TEMPORARY AND WILL BE REMOVED LATER-->
    <Button
        android:id="@+id/question_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="OpenQuestionList"
        android:text="@string/questionCall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveButton" />
    <!-- SAME REMINDER, READ FROM ABOVE-->

</androidx.constraintlayout.widget.ConstraintLayout>